--- a/data_service/.gitignore
+++ b/data_service/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 
 ### application.properties ###
-### data_service/src/main/resources/application.properties
+data_service/src/main/resources/application.properties
