--- a/api_service/src/main/resources/application.properties
+++ b/api_service/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=api_service
 
 spring.kafka.bootstrap-servers=localhost:9092
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=10GB
