Configured max message size in kafka

--- a/data_service/src/main/resources/application.properties
+++ b/data_service/src/main/resources/application.properties
@@ -13,3 +13,6 @@ aws.access-key=example
 aws.secret-key=example
 aws.region=example
 aws.service-endpoint=example
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.admin.modify-topic-configs=true
