--- a/api_service/src/main/resources/application.properties
+++ b/api_service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=api_service
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9093
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1GB
